k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: defrr-front-service
spec:
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
  selector:
  # this links to the name of the deployment
    app: frontend-app
