k8s/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-map-http
  namespace: default
spec:
  type: ExternalName
  externalName: defrr.com
