k8s/defrr-ingress-static-ip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: defrr-ingress
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
  - host: defrr.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: web-map-http
            port:
              number: 80
